--- a/HTML/Search.html
+++ b/HTML/Search.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
     <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <meta charset="UTF-8">
     <script>
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
 
@@ -22,7 +22,7 @@
         }
 
     </script>
-    <title>Age of Wonders 4 CBM - Search</title>
+    <title>Age of Wonders 4 Ascension - Search</title>
 </head>
 
 <body>
