--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/home.style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/home.style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
     <script>
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -24,54 +24,29 @@
     </script>
 
 
-    <title>Age of Wonders 4 Wiki - Competitive Balance Mod</title>
+    <title>Age of Wonders 4 Wiki - Ascension Mod</title>
 </head>
 
 <body>
     <header id="header"></header>
     <div class="textblocktitle">
-        <img src="/cbm/Icons/cbm_thumbnail.png" height="40px"> Competitive Balance Mod <img src="/cbm/Icons/cbm_thumbnail.png" height="40px">
+        <img src="/ascension/Icons/ascension_thumbnail.jpeg" height="40px"> Ascension Mod <img src="/ascension/Icons/ascension_thumbnail.jpeg" height="40px">
     </div>
 
     <div class="home-container">
         <div id="buttonHolder" class="loreText">
             <div class="paragraph-box">
-                <p>Rising from the ashes, Competitive Balance Mod: Phoenix Edition is here! With more changes balancing different strategies and fixing abusive tricks now you can fight other players on even grounds!</p>
+                <h3>THE BINDING OF WONDERS 4: REPENTANCE IS HERE!</h3>
             </div>
 
-            <div class="change-list">
-                <h3>Important features include:</h3>
-                <ul>
-                    <li>
-                        Hero Cap: cities no longer increase your hero cap. Instead everyone needs to build hero cap buildings (like Chosen Destroyers in the base game). It’s recommended to start building it immediately.
-                    </li>
-                    <li>
-                        Research buildings: are now much more expensive. Think about if your economy can afford going for those.
-                    </li>
-                    <li>
-                        Stability: positive stability now increases gold, mana and knowledge (!) income (in addition to default food, production and draft). Don’t forget to build taverns and bathhouses for your people! (Don’t worry Dark players, you get even stronger bonuses for NEGATIVE (!!!) stability).
-                    </li>
-                    <li>
-                        Cultural unit unlock: you now longer need higher levels of town hall to produce T2/3 cultural units. Instead you need draft buildings - Workshop for T2 and Blacksmith for T3. Isn’t that extra draft quite nice if you’re gunning for a better army?
-                    </li>
-                    <li>
-                        Town hall economy: since town halls stopped unlocking new units, they decided to help build up your empire! They produce knowledge and more gold depending on the level. Raise your population so you unlock and boost those economic powerhouses!
-                    </li>
-                    <li>
-                        Athletics or mounts: those form traits are much cheaper and provide much-needed overland movement boost for your armies. Strongly consider grabbing either of those.
-                    </li>
-                    <li>
-                        City defense: defensive structures are stronger and unlock earlier. If you fear being rushed by powerful enemy - turn your cities into impregnable fortresses by building walls and defensive towers. Hide behind those walls and turn the tide of the battle!
-                    </li>
-                    <li>
-                        <span>Full changelist together can be found here:</span>
-                        <a href="https://docs.google.com/document/d/1MwDE77bMUmxiifCrIKKwj80fICVkoSKa5wH75CQOd8M/edit">Google doc</a>
-                    </li>
-                    <li>
-                        <span>Incremental changelist (patch history) can be found here:</span>
-                        <a href="https://docs.google.com/document/d/1bptL2suAsmhBsJ-xYGIsKNNe6dTHM4SCkjU0OOIPZrA/edit">Google doc</a>
-                    </li>
-                </ul>
+            <div class="paragraph-box">
+                Ascension Mod: Repentance completely overhauls and redefines Society Traits, Units, Tomes & Spells aswell as adding ENTIRELY NEW ones such as WORLDBURNERS and THE CHOSEN ONES! This enables brand new playstyles that were not even thought possible before;
+                Massive Spell, Unit & Culture Changes that cannot be defined in this little chat bubble await you, and to those who like reading, there's a MASSIVE (Though not that frequently updated) CHANGELOG, detailing the countless changes and reworks to your favourite Spells, Units, and even Ruler types and Heroes to raise the ante HERE!:
+            </div>
+
+            <div class="paragraph-box">
+                <span>Full changelist together can be found here:</span>
+                <a href="https://docs.google.com/document/d/1MwDE77bMUmxiifCrIKKwj80fICVkoSKa5wH75CQOd8M/edit">Google doc</a>
             </div>
         </div>
     </div>
