--- a/HTML/Abilities.html
+++ b/HTML/Abilities.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
@@ -12,7 +12,7 @@
     <script>
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -287,13 +287,13 @@
                     abilityDescr = (jsonUnitAbilities[j].description);
 
                     var abilityIconType = "";
-                    imag.setAttribute("src", "/cbm/Icons/Abilities/" + abilityIcon + ".png");
+                    imag.setAttribute("src", "/ascension/Icons/Abilities/" + abilityIcon + ".png");
 
                     var abilityIconType = GetAbilityBackground(abilityDam);
 
-                    imag.setAttribute("style", "background-image: url(\"/cbm/Icons/Interface/" + abilityIconType + ".png\");background-repeat: no-repeat;background-size: 40px 40px");
+                    imag.setAttribute("style", "background-image: url(\"/ascension/Icons/Interface/" + abilityIconType + ".png\");background-repeat: no-repeat;background-size: 40px 40px");
 
-                    imag.setAttribute('onerror', "this.setAttribute('src','/cbm/Icons/Text/mp.png')");
+                    imag.setAttribute('onerror', "this.setAttribute('src','/ascension/Icons/Text/mp.png')");
                     imag.setAttribute("width", "40");
                     imag.setAttribute("height", "40");
 
@@ -481,7 +481,7 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Abilities List</title>
+    <title>Age of Wonders 4 Ascension - Abilities List</title>
 </head>
 
 <body>
