--- a/HTML/AstralTomesUnits.html
+++ b/HTML/AstralTomesUnits.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
@@ -12,7 +12,7 @@
         var unitarray = ["phantasm_warrior:tome_of_warding", "lesser_storm_spirit:tome_of_evocation", "evoker:tome_of_evocation", "amplification_pylon:tome_of_amplification", "watcher:tome_of_scrying", "astral_serpent:tome_of_summoning", "astral_keeper:tome_of_summoning", "phase_beast:tome_of_teleportation", "mirror_mimic:tome_of_the_astral_mirror"];
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -27,14 +27,14 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Astral Tome Units</title>
+    <title>Age of Wonders 4 Ascension - Astral Tome Units</title>
 </head>
 
 <body>
     <div id="header"></div>
 
     <div class="textblocktitle">
-        <img src="/cbm/Icons/Text/astral.png" height="40px"> Astral Tome Units <img src="/cbm/Icons/Text/astral.png" height="40px">
+        <img src="/ascension/Icons/Text/astral.png" height="40px"> Astral Tome Units <img src="/ascension/Icons/Text/astral.png" height="40px">
     </div>
 
 
