--- a/HTML/BarbarianUnits.html
+++ b/HTML/BarbarianUnits.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
@@ -12,7 +12,7 @@
         var unitarray = ["pathfinder", "sunderer", "warrior", "war_shaman", "fury", "berserker"];
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -26,14 +26,14 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Barbarian Units</title>
+    <title>Age of Wonders 4 Ascension - Barbarian Units</title>
 </head>
 
 <body>
     <div id="header"></div>
 
     <div class="textblocktitle">
-        <img src="/cbm/Icons/Text/barbarian.png" height="40px"> Barbarian Culture Units <img src="/cbm/Icons/Text/barbarian.png" height="40px">
+        <img src="/ascension/Icons/Text/barbarian.png" height="40px"> Barbarian Culture Units <img src="/ascension/Icons/Text/barbarian.png" height="40px">
     </div>
 
 
