--- a/HTML/ConstructUnits.html
+++ b/HTML/ConstructUnits.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script>
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -40,14 +40,14 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Construct</title>
+    <title>Age of Wonders 4 Ascension - Construct</title>
 </head>
 
 <body>
     <div id="header"></div>
 
     <div class="textblocktitle">
-        <img src="/cbm/Icons/Abilities/elemental.png" height="40px"> Construct Wildlife Units <img src="/cbm/Icons/Abilities/elemental.png" height="40px">
+        <img src="/ascension/Icons/Abilities/elemental.png" height="40px"> Construct Wildlife Units <img src="/ascension/Icons/Abilities/elemental.png" height="40px">
     </div>
     <div class="w3-container">
         <div class="w3-bar w3-black" id="buttonHolder">
