--- a/HTML/DualTomes.html
+++ b/HTML/DualTomes.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
@@ -13,7 +13,7 @@
 
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -25,7 +25,7 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Dual Tomes</title>
+    <title>Age of Wonders 4 Ascension - Dual Tomes</title>
 </head>
 
 <body>
