--- a/HTML/FactionCreation.html
+++ b/HTML/FactionCreation.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
     <script>
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -34,7 +34,7 @@
 
 
 
-    <title>Age of Wonders 4 CBM - Faction Creation</title>
+    <title>Age of Wonders 4 Ascension - Faction Creation</title>
 </head>
 
 <body>
