--- a/HTML/MysticUnits.html
+++ b/HTML/MysticUnits.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
@@ -14,7 +14,7 @@
 
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -27,14 +27,14 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Mystic Units</title>
+    <title>Age of Wonders 4 Ascension - Mystic Units</title>
 </head>
 
 <body>
     <div id="header"></div>
 
     <div class="textblocktitle">
-        <img src="/cbm/Icons/Text/mystic.png" height="40px"> Mystic Culture Units <img src="/cbm/Icons/Text/mystic.png" height="40px">
+        <img src="/ascension/Icons/Text/mystic.png" height="40px"> Mystic Culture Units <img src="/ascension/Icons/Text/mystic.png" height="40px">
     </div>
 
 
