--- a/HTML/NatureTomes.html
+++ b/HTML/NatureTomes.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
@@ -12,7 +12,7 @@
         var tomeArray = ["tome_of_roots", "tome_of_beasts", "tome_of_glades", "tome_of_fertility", "tome_of_cycles", "tome_of_vigor", "tome_of_natures_wrath", "tome_of_paradise", "tome_of_the_goddess_of_nature"];
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -25,7 +25,7 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Nature Tomes</title>
+    <title>Age of Wonders 4 Ascension - Nature Tomes</title>
 </head>
 
 <body>
