--- a/HTML/PrimalUnits.html
+++ b/HTML/PrimalUnits.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script>
@@ -13,7 +13,7 @@
 
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -26,7 +26,7 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Primal Units</title>
+    <title>Age of Wonders 4 Ascension - Primal Units</title>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
 
 
     <div class="textblocktitle">
-        <img src="/cbm/Icons/Text/primal.png" height="40px"> Primal Culture Units <img src="/cbm/Icons/Text/primal.png" height="40px">
+        <img src="/ascension/Icons/Text/primal.png" height="40px"> Primal Culture Units <img src="/ascension/Icons/Text/primal.png" height="40px">
 
     </div>
     <div style="display:flex; justify-content: space-evenly;">
@@ -62,26 +62,26 @@
     padding-top: 15px;
     max-width: 360px;">
             <button type="button" class="collapsible"> Mire Crocodile:</button>
-            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/mire_crocodile2.png"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/mire_crocodile.png"></div>
+            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/mire_crocodile2.png"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/mire_crocodile.png"></div>
             <br>
             <button type="button" class="collapsible"> Storm Crow:</button>
-            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/storm_crow2.png"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/storm_crow.png"></div>
+            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/storm_crow2.png"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/storm_crow.png"></div>
 
             <br>
             <button type="button" class="collapsible"> Glacial Mammoth:</button>
-            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/glacial_mammoth2.png"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/glacial_mammoth.png"></div>
+            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/glacial_mammoth2.png"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/glacial_mammoth.png"></div>
             <br>
             <button type="button" class="collapsible"> Ash Sabertooth:</button>
-            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/ash_sabertooth2.png"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/ash_sabertooth.png"></div>
+            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/ash_sabertooth2.png"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/ash_sabertooth.png"></div>
             <br>
             <button type="button" class="collapsible"> Dune Serpent:</button>
-            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/dune_serpent2.png"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/dune_serpent.png"></div>
+            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/dune_serpent2.png"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/dune_serpent.png"></div>
             <br>
             <button type="button" class="collapsible"> Sylvan Wolf:</button>
-            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/sylvan_wolf2.png"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/sylvan_wolf.png"></div>
+            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/sylvan_wolf2.png"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/sylvan_wolf.png"></div>
             <br>
             <button type="button" class="collapsible"> Tunneling Spider:</button>
-            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/tunneling_spider2.png"><img style="float:left;  width:100% ;padding:10px" src="/cbm/Icons/Interface/tunneling_spider.png"></div>
+            <div class="combatEnchantment" style="display: none;"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/tunneling_spider2.png"><img style="float:left;  width:100% ;padding:10px" src="/ascension/Icons/Interface/tunneling_spider.png"></div>
 
         </div>
     </div>
