--- a/HTML/ShadowTomes.html
+++ b/HTML/ShadowTomes.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
@@ -13,7 +13,7 @@
         var tomeArray = ["tome_of_necromancy", "tome_of_cryomancy", "tome_of_the_doomherald", "tome_of_souls", "tome_of_the_great_transformation", "tome_of_the_cold_dark", "tome_of_oblivion", "tome_of_the_reaper", "tome_of_the_eternal_lord"];
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -26,7 +26,7 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Shadow Tomes</title>
+    <title>Age of Wonders 4 Ascension - Shadow Tomes</title>
 </head>
 
 <body>
