--- a/HTML/TowerUnits.html
+++ b/HTML/TowerUnits.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<link rel="shortcut icon" type="image/x-icon" href="/cbm/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="/ascension/favicon.ico" />
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/cbm/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="/ascension/Style/style.css">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
     <script>
         $("#body").ready(function() {
 
-            $("#header").load("/cbm/HTML/header.html", function() {
+            $("#header").load("/ascension/HTML/header.html", function() {
                 CheckData();
             });
         });
@@ -37,7 +37,7 @@
     </script>
 
 
-    <title>Age of Wonders 4 CBM - Tower</title>
+    <title>Age of Wonders 4 Ascension - Tower</title>
 </head>
 
 <body>
@@ -46,7 +46,7 @@
 
 
     <div class="textblocktitle">
-        <img src="/cbm/Icons/Abilities/tower.png" height="40px"> Tower Units <img src="/cbm/Icons/Abilities/tower.png" height="40px">
+        <img src="/ascension/Icons/Abilities/tower.png" height="40px"> Tower Units <img src="/ascension/Icons/Abilities/tower.png" height="40px">
     </div>
     <div class="w3-container">
         <div id="buttonHolder" class="w3-bar w3-black">
