--- a/index.html
+++ b/index.html
@@ -40,10 +40,20 @@
             </div>
 
             <div class="paragraph-box">
-                Ascension Mod: Repentance completely overhauls and redefines Society Traits, Units, Tomes & Spells aswell as adding ENTIRELY NEW ones such as WORLDBURNERS and THE CHOSEN ONES! This enables brand new playstyles that were not even thought possible before;
-                Massive Spell, Unit & Culture Changes that cannot be defined in this little chat bubble await you, and to those who like reading, there's a MASSIVE (Though not that frequently updated) CHANGELOG, detailing the countless changes and reworks to your favourite Spells, Units, and even Ruler types and Heroes to raise the ante HERE!:
+                Ascension Mod: Repentance completely overhauls and redefines Society Traits, Units, Tomes & Spells aswell as adding ENTIRELY NEW ones!
+                <div class="paragraph-box">Unleash your potential with traits such as WORLDBURNERS and THE CHOSEN ONES! They enable brand new playstyles that were never even though possible before, allowing you to do exactly what
+                    Vergil is doing in the video you're watching in the background! (Yes, in Age of Wonders 4!)
+                </div> 
+                <div class="paragraph-box"> Massive Spell, Unit & Culture Changes that cannot be defined in a short description await you! 
             </div>
+            <div class="paragraph-box">and to those who like reading, there's a MASSIVE (Though not that frequently updated)
+                CHANGELOG, detailing the countless changes and reworks to your favourite Spells, Units, and even Ruler types and Heroes to raise the ante!
+            </div>
+                <div class="paragraph-box"> Additionally, you can find a BUILD GUIDE on a few builds to try out if you're overwhelmed by all the information!!
 
+                </div>
+                <div class="paragraph-box">Check out the build guide here!: <a href="https://www.canva.com/design/DAF-MR2vuY0/r0skLZRK_KBsqlKl3qm_EQ/edit">Build Guide</a>
+                </div>
             <div class="paragraph-box">
                 <span>Full changelist together can be found here:</span>
                 <a href="https://docs.google.com/document/d/1MwDE77bMUmxiifCrIKKwj80fICVkoSKa5wH75CQOd8M/edit">Google doc</a>
