--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
                 <div class="paragraph-box">Unleash your potential with traits such as WORLDBURNERS and THE CHOSEN ONES! They enable brand new playstyles that were never even though possible before, allowing you to do exactly what
                     Vergil is doing in the video you're watching in the background! (Yes, in Age of Wonders 4!)
                 </div> 
+                <div class="paragraph-box">Check out the NEW and updated cultures, such as DARK, gaining massive bonuses from NEGATIVE stability, REAVERS getting huge power spikes through their town halls, HIGH 
+                    getting unique bonuses from being EITHER EVIL OR GOOD!
+                </div>
                 <div class="paragraph-box"> Massive Spell, Unit & Culture Changes that cannot be defined in a short description await you! 
             </div>
-            <div class="paragraph-box">and to those who like reading, there's a MASSIVE (Though not that frequently updated)
+            <div class="paragraph-box">And to those who like reading, there's a MASSIVE (Though not that frequently updated)
                 CHANGELOG, detailing the countless changes and reworks to your favourite Spells, Units, and even Ruler types and Heroes to raise the ante!
             </div>
                 <div class="paragraph-box"> Additionally, you can find a BUILD GUIDE on a few builds to try out if you're overwhelmed by all the information!!
