--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                     getting unique bonuses from being EITHER EVIL OR GOOD!
                 </div>
                 <!DOCTYPE html>
-                <iframe width="600" height="600" <iframe width="2031" height="858" src="https://www.youtube.com/embed/kMIHrL-KZo4?autoplay1?mute1" title="The Chosen Ones Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <iframe width="600" height="600" src="https://www.youtube.com/embed/hs7gjIrEZds" title="Hyper Drive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <iframe width="600" height="600" src="https://www.youtube.com/embed/R9S-8zhR_Qc" title="Waterfowl Dance" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>></iframe><html>
+                <iframe width="600" height="600" src="https://www.youtube.com/embed/kMIHrL-KZo4?autoplay=1&mute=1" title="The Chosen Ones Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="600" height="600" src="https://www.youtube.com/embed/hs7gjIrEZds?autoplay=1&mute=1" title="Hyper Drive" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="600" height="600" src="https://www.youtube.com/embed/R9S-8zhR_Qc?autoplay=1&mute=1" title="Waterfowl Dance" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>></iframe><html>
                 <body>
                 
                 
